# dnd-note-application

./: .gitignore  CHANGELOG.md  README.md  build.py  pyproject.toml
.github/workflows/: build.yml
codex/: __init__.py  app.py  main.py  models.py  theme.py
codex/assets/: map_presets.json
codex/pages/: __init__.py  characters.py  connections.py  locations.py  lore.py  overview.py  sessions.py  settings.py
codex/widgets/: __init__.py  common.py  dialogs.py  map_view.py
